# test-claude-code-agents

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  init-mongo.js
.claude/: settings.json
.claude/agents/: backend-developer.md  backend-test-engineer.md  frontend-developer.md  (+6 more)
backend/: .env.example  .gitignore  env.example  main.py  pyproject.toml  pyrightconfig.json  pytest.ini
backend/src/: app.py  main.py
backend/src/application/: __init__.py
backend/src/application/ports/: __init__.py  news_repository.py  repositories.py
backend/src/application/use_cases/: __init__.py  user_use_cases.py
backend/src/application/use_cases/news/: __init__.py  create_news_use_case.py  delete_all_user_news_use_case.py  delete_news_use_case.py  generate_ai_news_use_case.py  get_public_news_use_case.py  get_user_news_use_case.py  toggle_favorite_use_case.py  update_news_status_use_case.py
backend/src/application/use_cases/user/: logout_user_use_case.py
backend/src/config/: ai_config.py  logfire.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  news_item.py  user.py
backend/src/domain/exceptions/: __init__.py  base.py  news_exceptions.py  user.py
backend/src/infrastructure/: __init__.py  database.py
backend/src/infrastructure/adapters/: __init__.py
backend/src/infrastructure/adapters/repositories/: __init__.py  mongodb_news_repository.py  mongodb_user_repository.py
backend/src/infrastructure/ai/: __init__.py  exceptions.py
backend/src/infrastructure/ai/agents/: __init__.py  news_generation_agent.py
backend/src/infrastructure/ai/models/: __init__.py  perplexity_model.py
backend/src/infrastructure/ai/schemas/: __init__.py  news_schemas.py
backend/src/infrastructure/web/: __init__.py  dependencies.py  mappers.py  news_mapper.py  security.py
backend/src/infrastructure/web/dto/: __init__.py  user_dto.py
backend/src/infrastructure/web/dtos/: news_dto.py
backend/src/infrastructure/web/routers/: __init__.py  ai_news.py  news.py  users.py
backend/tests/: conftest.py
backend/tests/application/: test_user_use_cases.py
backend/tests/application/use_cases/news/: test_delete_all_user_news_use_case.py  test_delete_news_use_case.py
backend/tests/domain/: test_user_entity.py  test_user_exceptions.py
backend/tests/infrastructure/adapters/: __init__.py
backend/tests/infrastructure/adapters/repositories/: test_mongodb_news_repository_delete.py  test_mongodb_user_repository.py
backend/tests/infrastructure/web/: __init__.py  test_news_delete_endpoints.py  test_user_dto.py  test_user_mapper.py  test_user_router.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vitest.config.ts
(+121 files in other folders)
